# adventofcode2020

./: CMakeLists.txt
src/day_01/: CMakeLists.txt  main.cpp
src/day_02/: CMakeLists.txt  main.cpp
src/day_03/: CMakeLists.txt  main.cpp
src/day_04/: CMakeLists.txt  main.cpp
src/day_05/: CMakeLists.txt  main.cpp
src/day_06/: CMakeLists.txt  main.cpp
src/day_07/: CMakeLists.txt  main.cpp
src/day_08/: CMakeLists.txt  main.cpp
src/day_09/: CMakeLists.txt  main.cpp
