cmake_minimum_required(VERSION 3.10)

project(adventofcode2020)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/day_01")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/day_02")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/day_03")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/day_04")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/day_05")
