add_executable(day_09 "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
message(STATUS "CMAKE_CURRENT_BINARY_DIR - ${CMAKE_CURRENT_BINARY_DIR}")
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/input.txt" "${CMAKE_CURRENT_BINARY_DIR}" COPYONLY)
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/test.txt" "${CMAKE_CURRENT_BINARY_DIR}" COPYONLY)
